<resources>
    <string name="app_name" translatable="false">DrinkKollect</string>
    <string name="api_host" translatable="false">bb139961.alzhanov.ru</string>
    <string name="api_port" translatable="false">18081</string>
    <string name="preference_file_key" translatable="false">ru.alzhanov.drinkkollect.preferences</string>
    <string name="s3_host" translatable="false">s3.alzhanov.ru</string>
    <string name="s3_access_key" translatable="false">pH99rhmmtyXbeAgy</string>
    <string name="s3_secret_key" translatable="false">ATrVJPF7gFrrIMbPJ7smPXly1iN1jh7p</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="card_image_description">Drink image</string>
    <string name="location_icon">Location icon</string>
    <string name="enter">Log in</string>
    <string name="back">Back</string>
    <string name="main_scroll_menu">Main page menu</string>
    <string name="change_account">Log out</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="done_action">Done</string>
    <string name="add_post_fab">Add post button</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="wrong_password">Wrong password</string>
    <string name="log_in">Log in</string>
    <string name="register">Sign up</string>
    <string name="i_want_to_watch">I\'m just looking</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="drink_picture">Drink picture</string>
    <string name="remove_photo">Remove photo</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="password_repeat">Repeat password</string>
    <string name="registration">Sign up</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="wrong_login">Wrong login</string>
    <string name="passwords_mismatch">Passwords mismatch</string>
    <string name="drink_name">Drink name</string>
    <string name="your_opinion">How was it?</string>
    <string name="where_found">Where did you get that?</string>
    <string name="add_to_collection">Add to your collection</string>
    <string name="add_photo">Add photo</string>
    <string name="friends">Friends</string>
    <string name="total_in_collection">Collection</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deletion_warning">After you delete your account all the information will be lost</string>
    <string name="delete">Delete</string>
    <string name="return_back">Back</string>
    <string name="password_change">Change password</string>
    <string name="change">Change</string>
    <string name="invalid_password">Wrong password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="want">I want it</string>
    <string name="just_now">Just now</string>
    <string name="stay">Stay</string>
    <string name="logout">Logout</string>
    <string name="you_need_to_be_logged_in_to_create_posts">You need to be logged in to create posts</string>
    <string name="you_need_to_be_logged_in_to_like_posts">You need to be logged in to like posts</string>
    <string name="you_need_to_be_logged_in">You need to be logged in to open profile</string>
    <string name="search_users" translatable="false">search users</string>
    <string name="search_hint">Search users</string>
    <string name="send_friend_request">Add to friends</string>
    <string name="log_in_to_send_friend_requests">You need to be logged in to send friend requests</string>
    <string name="cancel_friend_request">Cancel request</string>
    <string name="friend_requests">Friend requests</string>
    <string name="text_friends">Friends</string>
    <string name="log_in_to_accept_friend_requests">You need to be logged in to accept friend requests</string>
    <string name="removed">Removed</string>
    <!-- Yes, MessageFormat exists, but it's not necessary here -->
    <plurals name="drinks_in_collection">
        <item quantity="zero">%d drinks</item>
        <item quantity="one">%d drink</item>
        <item quantity="two">%d drinks</item>
        <item quantity="few">%d drinks</item>
        <item quantity="many">%d drinks</item>
        <item quantity="other">%d drinks</item>
    </plurals>
    <plurals name="people_want">
        <item quantity="zero">%d people want</item>
        <item quantity="one">%d person wants</item>
        <item quantity="two">%d people want</item>
        <item quantity="few">%d people want</item>
        <item quantity="many">%d people want</item>
        <item quantity="other">%d people want</item>
    </plurals>
</resources>