<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_dialog_bg">
    
    <TextView
        android:id="@+id/change_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_change"
        android:textColor="?colorOnSurface"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.DrinkKollect.Title.Large"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_old_password_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/change_password_description"
        android:layout_alignStart="@id/change_password_description"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints="auto"
        android:background="@drawable/rounded_auth_middle"
        android:ems="10"
        android:importantForAutofill="yes"
        app:helperText="@string/wrong_password"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/current_password"
            android:background="@drawable/rounded_auth_bottom"
            android:inputType="textPassword"
            android:textColor="?colorOnSurfaceVariant"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_new_password_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/change_password_old_password_layout"
        android:layout_marginTop="2dp"
        android:layout_alignStart="@id/change_password_description"
        android:layout_alignEnd="@id/change_password_old_password_layout"
        android:autofillHints="auto"
        android:background="@drawable/rounded_auth_bottom"
        android:ems="10"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        app:helperText="@string/invalid_password"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:background="@drawable/rounded_auth_bottom"
            android:inputType="textPassword"
            android:textColor="?colorOnSurfaceVariant"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_repeat_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/change_password_new_password_layout"
        android:layout_marginTop="2dp"
        android:layout_alignStart="@id/change_password_description"
        android:layout_alignEnd="@id/change_password_old_password_layout"
        android:autofillHints="auto"
        android:background="@drawable/rounded_auth_top"
        android:ems="10"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        app:helperText="@string/passwords_mismatch"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_auth_bottom"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:textColor="?colorOnSurfaceVariant"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:layout_below="@id/change_password_repeat_layout"
        android:backgroundTint="?colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="24dp"
        />

    <Button
        android:id="@+id/change_password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_back"
        android:backgroundTint="@android:color/transparent"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="1dp"
        android:layout_below="@id/change_password_repeat_layout"
        android:layout_toStartOf="@id/change_password_change"
        android:layout_alignTop="@id/change_password_change"
        android:layout_alignBottom="@id/change_password_change"
        android:layout_marginEnd="10dp"
        />

</RelativeLayout>