<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:content=".ProfileFragment">

    <ProgressBar
        android:id="@+id/profileProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_nav"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="0dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:text="@string/app_name"
            android:textSize="40sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_header_collection"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/profile_header_collection_label"
                style="@style/TextAppearance.DrinkKollect.Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/total_in_collection"
                app:layout_constraintBottom_toBottomOf="@id/profile_header_collection"
                app:layout_constraintStart_toStartOf="@id/profile_header_collection"
                app:layout_constraintTop_toTopOf="@id/profile_header_collection" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_send_friend_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.DrinkKollect.Label.Large"
                android:textColor="?colorOnSecondaryContainer"

                app:chipBackgroundColor="?colorSecondaryContainer"
                app:chipStrokeWidth="0dp"
                app:closeIcon="@null"
                app:closeIconEnabled="true"
                app:layout_constraintBottom_toBottomOf="@id/profile_header_collection"
                app:layout_constraintEnd_toEndOf="@id/profile_header_collection"
                app:layout_constraintTop_toTopOf="@id/profile_header_collection"
                tools:text="@string/send_friend_request" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_items_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" />
</LinearLayout>